--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "name": "interface-generator",
   "version": "1.0.0",
   "description": "generates UI implementation from data model",
-  "main": "createProject.js",
-  "bin": {
-    "custom-command": "./src/help.js"
-  },
+  "main": "help.js",
+  
   "scripts": {
-    "start": "node ./src/createProject.js",
+    "start": "node ./src/help.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "oumaima",
